--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -304,7 +304,7 @@ section {
 ¦---HERO---¦
 \*--------*/
 .hero {
-  background-image: url("/assets/images/hero-beard-man.jpg");
+  background-image: url("../images/hero-beard-man.jpg");
   background-size: cover;
   background-position: right;
   background-repeat: no-repeat;
