Update image and script references

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -402,7 +402,7 @@ footer {
 ¦---FOOTER-BTN-ICONS---¦
 \*--------------------*/
 .king-overlay {
-  background-image: url("Untitled-4.png");
+  background-image: url("../images/Untitled-4.png");
 }
 
 /*-----------------------*\
