--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -71,7 +71,7 @@ html {
 }
 
 body {
-  background-color: var(--white);
+  background-color: var(--primary-color);
   color: var(--purple-navy);
   font-size: 1.6rem;
 }
