Refactor header button styles

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -153,8 +153,7 @@ section {
 /*----------------*\
 ¦----HEADER-BTN----¦
 \*----------------*/
-.top-header .container a[id="order"],
-.top-header .container a[href=""] {
+.buttons {
     display: none;
 }
 
@@ -684,8 +683,7 @@ footer {
 /*----------------*\
 ¦----HEADER-BTN----¦
 \*----------------*/
-.top-header .container a[id="order"],
-.top-header .container a[href=""] {
+.buttons{
     display: block;
 }
 
